New date is now every 2nd Thurday

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>BerlinCouchDB &mdash; Berlin’s CouchDB Usergroup</title>
-    <meta name="description" content="BerlinCouchDB is a Usergroup on everything Apache CouchDB. We meet every 2nd Wednesday each month at 18: 30 at co.up, Adalbertstraße 7-8, Berlin-Kreuzberg.">
+    <meta name="description" content="BerlinCouchDB is a Usergroup on everything Apache CouchDB. We meet every 2nd Thursday each month at 19:00 at co.up, Adalbertstraße 7-8, Berlin-Kreuzberg.">
     <meta name="keywords" content="CouchDB, Usergroup, Berlin, Programming, NoSQL, Meetup">
     <meta name="author" content="BerlinCouchDB">
     <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1">
@@ -28,8 +28,8 @@
         <hgroup class="clearfix">
             <h1 class="logo" title="BerlinCouchDB"></h1>
             <h3 class="ug-info triangle-border left">
-                BerlinCouchDB is a Usergroup and introductory Course on everything <a href="http://couchdb.apache.org" title="Apache CouchDB">Apache CouchDB</a>.
-                We meet <strong>every 2nd Wednesday of the month</strong> at 18:30 at
+                BerlinCouchDB is a Usergroup on everything <a href="http://couchdb.apache.org" title="Apache CouchDB">Apache CouchDB</a>.
+                We meet <strong>every 2nd Thursday of the month</strong> at 19:00 at
                 <a href="http://co-up.de/about.html#location" title="co.up Coworking">co.up, Adalbertstraße 7-8, Berlin-Kreuzberg</a>.
                 For updates, please subscribe to the <a href="https://groups.google.com/forum/?fromgroups#!forum/berlincouchdb">Berlin CouchDB Google Group</a>,
                 <a href="http://twitter.com/berlincouchdb">follow us on Twitter</a>
@@ -41,18 +41,12 @@
     <div role="main" class="content clearfix">
         <article class="clearfix">
             <header class="clearfix center">
-                <h1>Next meetup on January, 9<sup>th</sup> 2013</h1>
+                <h1>Next meetup on February, 14<sup>th</sup> 2013</h1>
             </header>
             <section class="clearfix">
             	<h4>Next Talks:</h4>
 
                 <div class="three-cols clearfix">
-
-                  <div class="speaker">
-                    <h3>CouchDB in the real world: Building distributed car parts shops</h3>
-                    <h5>Oliver <a href="http://twitter.com/okurow">@okurow</a></h5>
-                    <p>Oliver talks about how he uses CouchDB for running distributed car parts shops. Topics include: complex data design and problems of auto parts,  mysql-couchdb mapping, filtered replication</p>
-                  </div>
 
                     <div class="speaker empty">
                         <h3>Free Slot</h3>
@@ -64,9 +58,21 @@
                         <p>
                             Drop us a line on your topic via twitter <a href="http://twitter.com/BerlinCouchDB" title="BerlinCouchDB on Twitter">Twitter</a>
                         </p>
-               	    </div>
+                    </div>
 
-			        <div class="speaker empty">
+                    <div class="speaker empty">
+                        <h3>Free Slot</h3>
+                        <h5>This slot could be yours!<br/>Submit your talk now.</h5>
+                        <p>
+                             You did some crazy stuff with CouchDB? You want to show something to the community or want to discuss something?
+                             Then you should <b>give a talk at Berlin CouchDB!</b>
+                        </p>
+                        <p>
+                            Drop us a line on your topic via twitter <a href="http://twitter.com/BerlinCouchDB" title="BerlinCouchDB on Twitter">Twitter</a>
+                        </p>
+                    </div>
+
+              <div class="speaker empty">
                         <h3>Free Slot</h3>
                         <h5>This slot could be yours!<br/>Submit your talk now.</h5>
                         <p>
@@ -77,10 +83,22 @@
                             Drop us a line on your topic via twitter <a href="http://twitter.com/BerlinCouchDB" title="BerlinCouchDB on Twitter">Twitter</a>
                         </p>
                     </div>
-			</div>
+      </div>
       
- 		<br />
-		<h4>Past Talks:</h4>
+        <br />
+    <h4>Past Talks:</h4>
+
+
+              <div class="one-cols clearfix">
+
+                  <div class="speaker">
+                    <h3>CouchDB in the real world: Building distributed car parts shops</h3>
+                    <h5>Oliver <a href="http://twitter.com/okurow">@okurow</a></h5>
+                    <p>Oliver talks about how he uses CouchDB for running distributed car parts shops. Topics include: complex data design and problems of auto parts,  mysql-couchdb mapping, filtered replication</p>
+                  </div>
+
+			       </div>
+      
 			<div class="two-cols clearfix">
 			<div class="speaker">
               <h3>Introduction to CouchDB V</h3>
@@ -233,7 +251,7 @@
       <div>
         <h5>The team</h5>
         <p>
-          Berlin CouchDB is organized by <a href="http://www.twitter.com/janl" title="Follow Jan L. on Twitter">Jan Lehnardt</a> &amp; <a href="http://www.twitter.com/JFriedensreich" title="Follow Jan J. on Twitter">Jan Johannes</a>, the newbie sessions are run by <a href="http://twitter.com/okurow">Oliver Kurowski</a>. Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a>.
+          Berlin CouchDB is organized by <a href="http://www.twitter.com/janl" title="Follow Jan L. on Twitter">Jan Lehnardt</a>, <a href="http://www.twitter.com/JFriedensreich" title="Follow Jan J. on Twitter">Jan Johannes</a> &amp; <a href="http://www.twitter.com/kaalita" title="Follow Katrin Apel on Twitter">Katrin Apel</a> . Design by <a href="http://www.twitter.com/m_besser" title="Follow Matti on Twitter">Matti Besser</a>.
         </p>
       </div>
       <div>
